<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context="com.example.lsb.LSBActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/image" />


        <TextView
            android:id="@+id/textViewChooseImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/original_image"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonChooseImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="chooseImage"
            android:text="@string/choose" />


        <EditText
            android:id="@+id/editTextCryptoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_text"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveImage"
            android:text="@string/save"/>
        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendImage"
            android:text="@string/send" />


    </LinearLayout>
</ScrollView>
