<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/backGround"
    android:padding="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/forgot_your_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/forgot_text"/>

    <EditText
        android:id="@+id/editTextForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your email here"
        android:textColorHint="@color/white"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonLogin"
        android:text="@string/reset"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:onClick="sendMessage"/>


</LinearLayout>